--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "xyz3282836/myfirstcp",
+    "description": "demo ,test ,v1.0",
     "license": "MIT",
     "authors": [
         {
@@ -12,8 +13,9 @@
     },
     "autoload": {
         "psr-4": {
-          "xyz\\": "src/xyz"
+            "xyz\\": "src/xyz"
         }
     },
     "minimum-stability": "dev"
 }
+
